Agregacion de nuevos endpoints para health check, backups, Actividad de usuarios, Ventas por usuario y cancelar venta

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,13 @@ db.sqlite3-journal
 .idea/
 *.swp
 *.swo
+
+# backups/.gitignore
+# No versionar archivos de respaldo
+*.sql
+*.dump
+*.backup
+*
+
+# Pero mantener la carpeta
+!.gitignore
