Actualizar .env.example con configuración correcta

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,19 @@
-# .env.example
+SECRET_KEY=cambien-esto-como-quieran
 
-# Django
-SECRET_KEY=SELEDA-AAAAHHHHHHH-ALVARO-DIAZ-REFERENCIA
 DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
 
-# Base de Datos PostgreSQL
-DB_NAME=pos_db
+ALLOWED_HOSTS=localhost,127.0.0.1,10.0.2.2
+
+# Configuración de PostgreSQL
+DB_NAME=pos_system_db
 DB_USER=postgres
-DB_PASSWORD=Destiny_56
+DB_PASSWORD=la-contraseña-que-le-pusieron-a-su-usuario-postgres-debe-de-ir-aqui
 DB_HOST=localhost
 DB_PORT=5432
 
-# CORS - Frontend URLs permitidas
-CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
+# CORS para React (localhost:5173) y Flutter (10.0.2.2)
+CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000,http://10.0.2.2:8000
 
-# JWT Settings (opcional, usa defaults si no se especifica)
+# Duración de tokens JWT
 JWT_ACCESS_TOKEN_LIFETIME_MINUTES=60
 JWT_REFRESH_TOKEN_LIFETIME_DAYS=7
