Fix: Corregir filtros de fecha en endpoint de ventas y mejorar manejo de timezones

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ ALLOWED_HOSTS=localhost,127.0.0.1,10.0.2.2
 
 # Configuración de PostgreSQL
 DB_NAME=pos_system_db
-DB_USER=postgres
+DB_USER=tu-usuario-de-postgres
 DB_PASSWORD=la-contraseña-que-le-pusieron-a-su-usuario-postgres-debe-de-ir-aqui
 DB_HOST=localhost
 DB_PORT=5432
